--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,7 +23,7 @@
 - name: Install docker-ce
   yum:
     name: docker-ce
-    state: latest
+    state: present
 
 - name: Start docker service
   systemd:
